--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
         "prettier-plugin-tailwindcss": "^0.5.14",
         "tailwindcss": "^3.4.3",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "prettier-plugin-blade": "^2.1.13"
     }
 }
